Alignment Fixes

--- a/src/app/create-profile/create-profile.component.css
+++ b/src/app/create-profile/create-profile.component.css
@@ -15,9 +15,10 @@
     border-radius: 0px 15px 15px 0px;
     background-color: #0066FF;
     color:white;
+    font-weight: 600;
     float:left;
     font-family: 'Lato', sans-serif;
-    padding: 5px 10px 5px 15px ;
+    padding: 5px 10px 5px 25px ;
     margin-bottom: 20px;
 }
 .container {
