--- a/src/app/passbook/passbook.component.css
+++ b/src/app/passbook/passbook.component.css
@@ -9,12 +9,12 @@
     font-weight: 600;
     display: inline-block;
     margin-top:15px;
-    padding: 5px 15px 5px 15px ;
+    padding: 5px 15px 5px 25px ;
     margin-bottom: 20px;
 }
 
 .plotHeader{
-    width: 97%;
+    width: 96%;
     margin:0 auto;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -27,7 +27,7 @@
 	letter-spacing: 1px;
 }
 .plotContainer{
-    width: 97%;
+    width: 96%;
     margin:0 auto;
     margin-bottom:10px;
     background-color: white; 
@@ -37,4 +37,9 @@
 .modalPic{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width:80%;
+}
+@media all and (max-width: 769px) {
+	.ui.medium.image{
+		display: none;
+  }
 }
