--- a/src/app/profile/emi-detail/emi-detail.component.css
+++ b/src/app/profile/emi-detail/emi-detail.component.css
@@ -84,7 +84,7 @@
 	padding-left: 10px !important;
 }
 .alignRs{
-	transform: translateY(3px);
+	transform: translateY(-2px);
 }
 .selectedDate{
 	/* background-color: #FCB332; */
