--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -14,7 +14,7 @@
     font-weight: 600;
     display: inline-block;
     margin-top:15px;
-    padding: 5px 10px 5px 15px ;
+    padding: 5px 10px 5px 25px ;
     margin-bottom: 20px;
 }
 .plotHeaderMobile{
