--- a/src/app/transactions/transactions.component.css
+++ b/src/app/transactions/transactions.component.css
@@ -9,6 +9,6 @@
     font-weight: 600;
     display: inline-block;
     margin-top:15px;
-    padding: 5px 15px 5px 15px ;
+    padding: 5px 15px 5px 25px ;
     margin-bottom: 20px;
 }
